<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textLogo"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/etField_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/lineColor"
        android:ems="10"
        android:text="@string/default_city"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:autofillHints=""
        tools:ignore="LabelFor,VisualLintTextFieldSize" />


    <Button
        android:id="@+id/bStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etField_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/btn"
        android:text="@string/btnText"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageKing"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll_view"
        android:layout_marginTop="10sp"
        android:visibility="invisible"
        android:layout_marginHorizontal="100sp"
        app:srcCompat="@mipmap/fire"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/tvHOT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@id/scroll_view"
        android:layout_marginTop="10sp"
        android:visibility="invisible"
        android:text="@string/hot"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="25sp" />



    <ScrollView
        android:id="@+id/scroll_view"
        tools:itemCount="3"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_below="@id/bStart"
        android:layout_marginTop="20sp">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/fst_lot"
                android:layout_marginTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal"
                android:background="@color/sky">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/temper"
                    android:textAlignment="center"
                    android:textColor="#00695C"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/tvBot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/hintColor"
                    android:textSize="25sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/sec_lot"
                android:layout_marginTop="10sp"
                android:layout_width="match_parent"
                android:layout_below="@+id/fst_lot"
                android:layout_height="50sp"
                android:orientation="horizontal"
                android:background="@color/sky">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/filsLike"
                    android:textAlignment="center"
                    android:textColor="#00695C"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/tvFlLike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/hintColor"
                    android:textSize="25sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/trh_lot"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/sec_lot"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:background="@color/sky">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textColor="#00695C"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/hintColor"
                    android:textSize="25sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/for_lot"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/trh_lot"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:background="@color/sky">

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/pressure"
                    android:textAlignment="center"
                    android:textColor="#00695C"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvPress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/hintColor"
                    android:textSize="25sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/fiv_lot"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/for_lot"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:background="@color/sky">

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/wind_speed"
                    android:textAlignment="center"
                    android:textColor="#00695C"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/hintColor"
                    android:textSize="25sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/six_lot"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/fiv_lot"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:background="@color/sky">

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/wind_direct"
                    android:textAlignment="center"
                    android:textColor="#00695C"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvWindDerect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/hintColor"
                    android:textSize="25sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/sev_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/six_lot"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:background="@color/sky">

                <TextView
                    android:id="@+id/tv7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="#00695C"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/hintColor"
                    android:textSize="25sp" />

            </LinearLayout>
        </RelativeLayout>
        </ScrollView>
</RelativeLayout>